--- a/www.nass.gov.ng/3ecb3a99fb79f7500a8fbce71bfbd3b55a525c96.yml
+++ b/www.nass.gov.ng/3ecb3a99fb79f7500a8fbce71bfbd3b55a525c96.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 00:53:12 GMT
+    - Thu, 22 Mar 2018 15:22:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nZmQCe%2CDj%2Cj5WFffD-1w%2C2; path=/
+    - PHPSESSID=4INNjmxKPvI%2Ct2wx4P6%2C62; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 00:53:12 GMT
+recorded_at: Thu, 22 Mar 2018 15:22:30 GMT
