--- a/www.nass.gov.ng/f6d24be668f989ea976773116eb2315325ef1729.yml
+++ b/www.nass.gov.ng/f6d24be668f989ea976773116eb2315325ef1729.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 01:12:11 GMT
+    - Thu, 22 Mar 2018 15:43:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WuszINHYWLgMAQlDdzxBg1; path=/
+    - PHPSESSID=LNi1yM1-rsc5HvCSh%2CncF0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 01:12:11 GMT
+recorded_at: Thu, 22 Mar 2018 15:43:34 GMT
