--- a/www.nass.gov.ng/9ddcf3cbf4a27ee2d8629114e83fc1b76fef2c54.yml
+++ b/www.nass.gov.ng/9ddcf3cbf4a27ee2d8629114e83fc1b76fef2c54.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 01:17:23 GMT
+    - Thu, 22 Mar 2018 15:50:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nzyuZb2y45CUop8EoOngS0; path=/
+    - PHPSESSID=ab8yWTtng%2CWQwrrZN7Wkf3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 01:17:23 GMT
+recorded_at: Thu, 22 Mar 2018 15:50:05 GMT
