--- a/www.nass.gov.ng/fb10964bbdbdb8fa69f72d025bd6dfa86da6919c.yml
+++ b/www.nass.gov.ng/fb10964bbdbdb8fa69f72d025bd6dfa86da6919c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Mar 2018 02:40:36 GMT
+    - Thu, 22 Mar 2018 17:12:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=USxq6JnfCcFGD4qbMVuyr2; path=/
+    - PHPSESSID=dIQsk%2ChoYTO0cXFMO4tQ-2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Mar 2018 02:40:36 GMT
+recorded_at: Thu, 22 Mar 2018 17:12:12 GMT
